--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -12,7 +12,8 @@ jobs:
         steps:
             - name: Set up system
               run: |
-                  sudo apt-get -qq install -y gettext
+                  sudo apt-get --assume-yes update
+                  sudo apt-get --assume-yes install gettext
             - name: Checkout repository
               uses: actions/checkout@v2
             - name: Create config
@@ -24,17 +25,17 @@ jobs:
               uses: actions/setup-python@v2
               with:
                   python-version: 3.8
-            - name: Load cache for dependencies
+            - name: Load cache for python dependencies
               uses: actions/cache@v2
               with:
                   path: ~/.cache/pip
                   key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
                   restore-keys: |
                       ${{ runner.os }}-pip-
-            - name: Install dependencies
+            - name: Install python dependencies
               run: |
                   python -m pip install --upgrade pip
-                  pip install pre-commit -r requirements.txt
+                  python -m pip install pre-commit --requirement requirements.txt
             - name: Load cache for pre-commit
               uses: actions/cache@v2
               with:
