--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -36,6 +36,16 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install pre-commit --requirement requirements.txt
+            - name: Load cache for node dependencies
+              uses: actions/cache@v2
+              with:
+                  path: node_modules
+                  key: ${{ runner.os }}-node-${{ hashFiles('yarn.lock') }}
+                  restore-keys: |
+                      ${{ runner.os }}-node-
+            - name: Install node dependencies
+              run: |
+                  yarn install --non-interactive --frozen-lockfile
             - name: Load cache for pre-commit
               uses: actions/cache@v2
               with:
@@ -46,5 +56,3 @@ jobs:
             - name: Run pre-commit
               run: |
                   pre-commit run --show-diff-on-failure --color=always --all-files
-              env:
-                  SKIP: build core
