--- a/package.json
+++ b/package.json
@@ -15,21 +15,20 @@
         "not dead"
     ],
     "dependencies": {
-        "autoprefixer": "^10.0.1",
+        "autoprefixer": "^10.4.2",
         "bootstrap": "^4.5.3",
-        "css-loader": "^5.0.0",
-        "cssnano": "^4.1.10",
-        "extract-loader": "^5.1.0",
-        "file-loader": "^6.2.0",
+        "css-loader": "^6.6.0",
+        "css-minimizer-webpack-plugin": "^3.4.1",
         "jquery": "^3.5.1",
+        "mini-css-extract-plugin": "^2.5.3",
         "popper.js": "^1.16.1",
-        "postcss": "^8.1.4",
-        "postcss-loader": "^4.0.4",
-        "sass": "^1.27.0",
-        "sass-loader": "^10.0.4",
-        "webpack": "^5.3.0",
-        "webpack-cli": "^4.1.0",
-        "webpack-remove-empty-scripts": "^0.6.3"
+        "postcss": "^8.4.6",
+        "postcss-loader": "^6.2.1",
+        "sass": "^1.49.7",
+        "sass-loader": "^12.4.0",
+        "webpack": "^5.68.0",
+        "webpack-cli": "^4.9.2",
+        "webpack-remove-empty-scripts": "^0.7.3"
     },
     "devDependencies": {
         "eslint": "^7.12.1",
