--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -36,16 +36,9 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install pre-commit --requirement requirements.txt
-            - name: Load cache for node dependencies
-              uses: actions/cache@v2
-              with:
-                  path: node_modules
-                  key: ${{ runner.os }}-node-${{ hashFiles('yarn.lock') }}
-                  restore-keys: |
-                      ${{ runner.os }}-node-
             - name: Install node dependencies
               run: |
-                  yarn install --non-interactive --frozen-lockfile
+                  npm ci
             - name: Load cache for pre-commit
               uses: actions/cache@v2
               with:
