--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,105 +1,121 @@
 repos:
-    - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: v3.3.0
-      hooks:
-          - id: check-ast
-          - id: check-json
-          - id: check-toml
-          - id: check-yaml
-          - id: check-xml
-          - id: check-executables-have-shebangs
-          - id: check-merge-conflict
-          - id: check-case-conflict
-          - id: check-docstring-first
-          - id: debug-statements
-          - id: name-tests-test
-            args: [--django]
-          - id: end-of-file-fixer
-            exclude: \.min\.(js|css)$
-          - id: mixed-line-ending
-            args: [--fix=lf]
-            exclude: \.min\.(js|css)$
-          - id: requirements-txt-fixer
-    - repo: https://github.com/paulhfischer/pre-commit-hooks
-      rev: v1.0.0
-      hooks:
-          - id: format-general
-          - id: format-web
-          - id: lint-css
-          - id: lint-javascript
-    - repo: https://github.com/lovesegfault/beautysh
-      rev: 6.0.1
-      hooks:
-          - id: beautysh
-    - repo: https://github.com/shellcheck-py/shellcheck-py
-      rev: v0.7.1.1
-      hooks:
-          - id: shellcheck
-    - repo: https://github.com/PyCQA/isort
-      rev: 5.6.4
-      hooks:
-          - id: isort
-    - repo: https://github.com/asottile/add-trailing-comma
-      rev: v2.0.1
-      hooks:
-          - id: add-trailing-comma
-    - repo: https://github.com/psf/black
-      rev: 20.8b1
-      hooks:
-          - id: black
-            language_version: python3
-    - repo: https://github.com/pre-commit/pygrep-hooks
-      rev: v1.7.0
-      hooks:
-          - id: python-check-blanket-noqa
-          - id: python-use-type-annotations
-    - repo: https://github.com/PyCQA/bandit
-      rev: 1.6.2
-      hooks:
-          - id: bandit
-    - repo: https://gitlab.com/pycqa/flake8
-      rev: 3.8.4
-      hooks:
-          - id: flake8
-            additional_dependencies:
-                - flake8-broken-line
-                - flake8-commas
-                - flake8-bugbear
-                - flake8-comprehensions
-                - flake8-mutable
-                - flake8-return
-                - flake8-typing-imports
-                - flake8-simplify
-                - flake8-print
-                - flake8-use-fstring
-                - flake8-django
-    - repo: local
-      hooks:
-          - id: django-migrations
-            name: django-migrations
-            entry: ./manage.py makemigrations
-            language: system
-            pass_filenames: false
-          - id: django-makemessages
-            name: django-makemessages
-            entry: ./manage.py makemessages -a --add-location=file --ignore="node_modules/*"
-            language: system
-            pass_filenames: false
-          - id: django-compilemessages
-            name: django-compilemessages
-            entry: ./manage.py compilemessages # TODO: add `--ignore="node_modules/*"`-flag (requires django>=3.0)
-            language: system
-            pass_filenames: false
-          - id: django-check
-            name: django-check
-            entry: ./manage.py check --fail-level=INFO
-            language: system
-            pass_filenames: false
-    - repo: local
-      hooks:
-          - id: build core
-            name: build core
-            entry: npm run build:core
-            language: node
-            pass_filenames: false
-            verbose: true
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.1.0
+    hooks:
+      - id: check-ast
+      - id: check-json
+      - id: check-toml
+      - id: check-yaml
+      - id: check-xml
+      - id: check-executables-have-shebangs
+      - id: check-merge-conflict
+      - id: check-case-conflict
+      - id: check-docstring-first
+      - id: debug-statements
+      - id: name-tests-test
+        args: [--django]
+      - id: end-of-file-fixer
+        exclude: \.min\.(js|css)$
+      - id: mixed-line-ending
+        args: [--fix=lf]
+        exclude: \.min\.(js|css)$
+      - id: requirements-txt-fixer
+  - repo: https://github.com/paulhfischer/prettier-config
+    rev: v1.1.0
+    hooks:
+      - id: lint
+  - repo: https://github.com/paulhfischer/stylelint-config
+    rev: v1.2.0
+    hooks:
+      - id: lint
+  - repo: https://github.com/paulhfischer/eslint-config-javascript
+    rev: v1.2.0
+    hooks:
+      - id: lint
+  - repo: https://github.com/thibaudcolas/curlylint
+    rev: v0.13.0
+    hooks:
+      - id: curlylint
+        types: [file]
+        files: \.html$
+  - repo: https://github.com/lovesegfault/beautysh
+    rev: v6.2.1
+    hooks:
+      - id: beautysh
+  - repo: https://github.com/shellcheck-py/shellcheck-py
+    rev: v0.8.0.4
+    hooks:
+      - id: shellcheck
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.31.0
+    hooks:
+      - id: pyupgrade
+        args: [--py37-plus]
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.10.1
+    hooks:
+      - id: isort
+  - repo: https://github.com/asottile/add-trailing-comma
+    rev: v2.2.1
+    hooks:
+      - id: add-trailing-comma
+  - repo: https://github.com/psf/black
+    rev: 22.1.0
+    hooks:
+      - id: black
+        language_version: python3
+  - repo: https://github.com/pre-commit/pygrep-hooks
+    rev: v1.9.0
+    hooks:
+      - id: python-check-blanket-noqa
+      - id: python-use-type-annotations
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.2
+    hooks:
+      - id: bandit
+  - repo: https://gitlab.com/PYCQA/flake8
+    rev: 3.9.2
+    hooks:
+      - id: flake8
+        additional_dependencies:
+          - flake8-broken-line
+          - flake8-commas
+          - flake8-bugbear
+          - flake8-comprehensions
+          - flake8-mutable
+          - flake8-return
+          - flake8-typing-imports
+          - flake8-simplify
+          - flake8-print
+          - flake8-use-fstring
+          - flake8-django
+  - repo: local
+    hooks:
+      - id: django-migrations
+        name: django-migrations
+        entry: ./manage.py makemigrations
+        language: system
+        pass_filenames: false
+      - id: django-makemessages
+        name: django-makemessages
+        entry: ./manage.py makemessages -a --add-location=file --ignore="node_modules/*"
+        language: system
+        pass_filenames: false
+      - id: django-compilemessages
+        name: django-compilemessages
+        entry: ./manage.py compilemessages # TODO: add `--ignore="node_modules/*"`-flag (requires django>=3.0)
+        language: system
+        pass_filenames: false
+      - id: django-check
+        name: django-check
+        entry: ./manage.py check --fail-level=INFO
+        language: system
+        pass_filenames: false
+  - repo: local
+    hooks:
+      - id: build core
+        name: build core
+        entry: npm run build:core
+        language: node
+        pass_filenames: false
+        verbose: true
