--- a/package.json
+++ b/package.json
@@ -14,6 +14,21 @@
         ">0.2%",
         "not dead"
     ],
+    "eslintConfig": {
+        "extends": [
+            "@paulhfischer/eslint-config-javascript"
+        ],
+        "env": {
+            "browser": true,
+            "jquery": true
+        }
+    },
+    "prettier": "@paulhfischer/prettier-config",
+    "stylelint": {
+        "extends": [
+            "@paulhfischer/stylelint-config"
+        ]
+    },
     "dependencies": {
         "autoprefixer": "^10.4.2",
         "bootstrap": "^4.5.3",
@@ -31,17 +46,8 @@
         "webpack-remove-empty-scripts": "^0.7.3"
     },
     "devDependencies": {
-        "eslint": "^7.12.1",
-        "eslint-config-airbnb-base": "^14.2.0",
-        "eslint-config-prettier": "^6.15.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.1.4",
-        "js-beautify": "^1.13.0",
-        "prettier": "^2.1.2",
-        "stylelint": "^8.4.0",
-        "stylelint-config-airbnb": "^0.0.0",
-        "stylelint-order": "^0.7.0",
-        "stylelint-scss": "^1.5.2"
+        "@paulhfischer/prettier-config": "1.1.0",
+        "@paulhfischer/stylelint-config": "1.2.0",
+        "@paulhfischer/eslint-config-javascript": "1.2.0"
     }
 }
