moved to typescript

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     ],
     "eslintConfig": {
         "extends": [
-            "@paulhfischer/eslint-config-javascript"
+            "@paulhfischer/eslint-config-typescript"
         ],
         "env": {
             "browser": true,
@@ -30,7 +30,11 @@
         ]
     },
     "dependencies": {
+        "@babel/plugin-transform-runtime": "^7.17.0",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-typescript": "^7.16.7",
         "autoprefixer": "^10.4.2",
+        "babel-loader": "^8.2.3",
         "bootstrap": "^4.5.3",
         "css-loader": "^6.6.0",
         "css-minimizer-webpack-plugin": "^3.4.1",
@@ -41,13 +45,15 @@
         "postcss-loader": "^6.2.1",
         "sass": "^1.49.7",
         "sass-loader": "^12.4.0",
+        "terser-webpack-plugin": "^5.3.1",
+        "ts-loader": "^9.2.6",
         "webpack": "^5.68.0",
         "webpack-cli": "^4.9.2",
         "webpack-remove-empty-scripts": "^0.7.3"
     },
     "devDependencies": {
+        "@paulhfischer/eslint-config-typescript": "^1.1.0",
         "@paulhfischer/prettier-config": "1.1.0",
-        "@paulhfischer/stylelint-config": "1.2.0",
-        "@paulhfischer/eslint-config-javascript": "1.2.0"
+        "@paulhfischer/stylelint-config": "1.2.0"
     }
 }
